Bug 1872482 - recreate non-ephemeral background task profile directory if it's missing r=mossop

Differential Revision: https://phabricator.services.mozilla.com/D210677