toolkit/profile/xpcshell/test_select_backgroundtasks_not_ephemeral_exists.js
@@ -17,10 +17,11 @@ add_task(condition, async () => {
   let hash = xreDirProvider.getInstallHash();
 
   let saltedPath = `saltSALT.${vendor}BackgroundTask-${hash}-not_ephemeral_profile`;
+  let profileName = `${vendor}BackgroundTask-${hash}-not_ephemeral_profile`;
 
   // See note about ordering below.
   BACKGROUNDTASKS_PROFILE_DATA.backgroundTasksProfiles.splice(0, 0, {
-    name: `${vendor}BackgroundTask-${hash}-not_ephemeral_profile`,
+    name: profileName,
     path: saltedPath,
   });
 
@@ -38,19 +39,34 @@ add_task(condition, async () => {
   bts.overrideBackgroundTaskNameForTesting("not_ephemeral_profile");
 
   let { didCreate, rootDir } = selectStartupProfile();
+
   checkStartupReason("backgroundtask-not-ephemeral");
 
-  Assert.equal(didCreate, false, "Re-used existing non-ephemeral profile");
+  //test directory will be created
+  Assert.equal(
+    didCreate,
+    true,
+    "Re-used existing non-ephemeral profile, but should create a new directory for it"
+  );
+
+  Assert.equal(
+    rootDir.exists(),
+    true,
+    "rootDir has a directory in the file system"
+  );
 
   let profileData = readProfilesIni();
 
   // Profile names are lexicographically ordered, and `not_ephemeral_profile`
   // sorts before `unrelated_task`.
   Assert.equal(profileData.backgroundTasksProfiles.length, 2);
-  Assert.deepEqual(profileData, BACKGROUNDTASKS_PROFILE_DATA);
 
+  //make sure the new salted path is recorded in profiles.ini
+  let createdProfile = profileData.backgroundTasksProfiles.find(
+    searchProfile => searchProfile.name == profileName
+  );
   Assert.ok(
-    rootDir.path.endsWith(saltedPath),
+    rootDir.path.endsWith(createdProfile.path),
     `rootDir "${rootDir.path}" ends with salted path "${saltedPath}"`
   );
 
